kubernetes-networks/canary/02-canary-web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-web-1
  namespace: canary-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-web-1
  template:
    metadata:
      name: canary-web-1
      labels:
        app: canary-web-1
    spec:
      containers:
      - name: web-1
        image: rt7402/webapp:latest
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-web-2
  namespace: canary-production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-web-2
  template:
    metadata:
      name: canary-web-2
      labels:
        app: canary-web-2
    spec:
      containers:
      - name: web-2
        image: rt7402/webapp:latest
        livenessProbe:
          tcpSocket:
            port: 8000
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8000
        volumeMounts:
        - name: app
          mountPath: /app
      volumes:
      - name: app
        emptyDir: {}
