kubernetes-networks/canary/03-canary-web-svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-web-1
  namespace: canary-production
spec:
  selector:
    app: canary-web-1
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---

apiVersion: v1
kind: Service
metadata:
  name: canary-web-2
  namespace: canary-production
spec:
  selector:
    app: canary-web-2
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
