kubernetes-networks/canary/04-canary-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-web-1
  namespace: canary-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: canary-web.production.cluster.local
    http:
      paths:
      - path: /canary-web
        backend:
          serviceName: canary-web-1
          servicePort: 8000
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: canary-web-2
  namespace: canary-production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "canary-web"
spec:
  rules:
  - host: canary-web.production.cluster.local
    http:
      paths:
      - path: /canary-web
        backend:
          serviceName: canary-web-2
          servicePort: 8000
